<?xml version="1.0"?>
<package format="3">
  <name>adapted_point_cloud_transport</name>
  <version>0.1.0</version>
  <description>Type-adapted point_cloud_transport wrappers with same-process intra-process delivery.</description>
  <maintainer email="maik.knof@gmx.de">Maik Knof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_target_dependencies</buildtool_depend>

  <depend>point_cloud_transport</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
